added Makefile option NOSYSHOSTKEYLOAD=1

--- a/Makefile.in
+++ b/Makefile.in
@@ -183,6 +183,10 @@ ifeq ($(MULTI),1)
 	CFLAGS+=$(addprefix -DDBMULTI_, $(PROGRAMS)) -DDROPBEAR_MULTI
 endif
 
+ifeq ($(NOSYSHOSTKEYLOAD),1)
+CFLAGS+=-DNOSYSHOSTKEYLOAD
+endif
+
 dropbearmulti$(EXEEXT): $(HEADERS) $(MULTIOBJS) $(LIBTOM_DEPS) Makefile
 	$(CC) $(LDFLAGS) -o $@ $(MULTIOBJS) $(LIBTOM_LIBS) $(LIBS) @CRYPTLIB@
 
