added ed25519 key generation (dropbearkey -t ed25519)

--- a/Makefile.in
+++ b/Makefile.in
@@ -25,12 +25,12 @@ LIBTOM_LIBS=$(STATIC_LTC) $(STATIC_LTM)
 endif
 
 COMMONOBJS=dbutil.o buffer.o dbhelpers.o \
-		dss.o ed25519.o bignum.o \
+		dss.o ed25519.o ed25519_crypto.o bignum.o \
 		signkey.o rsa.o dbrandom.o \
 		queue.o \
 		atomicio.o compat.o fake-rfc2553.o \
 		ltc_prng.o ecc.o ecdsa.o crypto_desc.o \
-		gensignkey.o gendss.o genrsa.o
+		gensignkey.o gendss.o gened25519.o genrsa.o
 
 SVROBJS=svr-kex.o svr-auth.o sshpty.o \
 		svr-authpasswd.o svr-authpubkey.o svr-authpubkeyoptions.o svr-session.o svr-service.o \
@@ -54,9 +54,9 @@ CONVERTOBJS=dropbearconvert.o keyimport.o
 SCPOBJS=scp.o progressmeter.o atomicio.o scpmisc.o compat.o
 
 HEADERS=options.h dbutil.h session.h packet.h algo.h ssh.h buffer.h kex.h \
-		dss.h ed25519.h bignum.h signkey.h rsa.h dbrandom.h service.h auth.h \
+		dss.h ed25519.h ed25519_crypto.h bignum.h signkey.h rsa.h dbrandom.h service.h auth.h \
 		debug.h channel.h chansession.h config.h queue.h sshpty.h \
-		termcodes.h gendss.h genrsa.h runopts.h includes.h \
+		termcodes.h gendss.h gened25519.h genrsa.h runopts.h includes.h \
 		loginrec.h atomicio.h x11fwd.h agentfwd.h tcpfwd.h compat.h \
 		listener.h fake-rfc2553.h ecc.h ecdsa.h
 
