--- a/Makefile.in
+++ b/Makefile.in
@@ -24,7 +24,8 @@ CFLAGS+=-I$(srcdir)/libtomcrypt/src/headers/
 LIBTOM_LIBS=$(STATIC_LTC) $(STATIC_LTM) 
 endif
 
-COMMONOBJS=dbutil.o buffer.o dbhelpers.o \
+# TODO(pts): Move keyimport.o back to CONVERTOBJS if not needed.
+COMMONOBJS=dbutil.o buffer.o dbhelpers.o keyimport.o \
 		dss.o ed25519.o ed25519_crypto.o bignum.o \
 		signkey.o rsa.o dbrandom.o \
 		queue.o \
@@ -49,7 +50,7 @@ CLISVROBJS=common-session.o packet.o common-algo.o common-kex.o \
 
 KEYOBJS=dropbearkey.o
 
-CONVERTOBJS=dropbearconvert.o keyimport.o
+CONVERTOBJS=dropbearconvert.o
 
 SCPOBJS=scp.o progressmeter.o atomicio.o scpmisc.o compat.o
 
@@ -187,6 +188,10 @@ endif
 
 ifeq ($(NOSYSHOSTKEYLOAD),1)
 CFLAGS+=-DNOSYSHOSTKEYLOAD
+endif
+
+ifeq ($(OPENSSHHOSTKEYLOAD),1)
+CFLAGS+=-DOPENSSHHOSTKEYLOAD
 endif
 
 dropbearmulti$(EXEEXT): $(HEADERS) $(MULTIOBJS) $(LIBTOM_DEPS) Makefile
