added generating OpenSSH private keys, as dropbearkey -Z openssh, with make WRITEOPENSSHKEYS=1

--- a/Makefile.in
+++ b/Makefile.in
@@ -194,6 +194,10 @@ ifeq ($(OPENSSHHOSTKEYLOAD),1)
 CFLAGS+=-DOPENSSHHOSTKEYLOAD
 endif
 
+ifeq ($(WRITEOPENSSHKEYS),1)
+CFLAGS+=-DWRITEOPENSSHKEYS
+endif
+
 dropbearmulti$(EXEEXT): $(HEADERS) $(MULTIOBJS) $(LIBTOM_DEPS) Makefile
 	$(CC) $(LDFLAGS) -o $@ $(MULTIOBJS) $(LIBTOM_LIBS) $(LIBS) @CRYPTLIB@
 
